# DN7-Panel

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  check_i18n.js  deny.toml  install.sh  release.toml  rust-toolchain.toml
.github/: gen_releases.py
.github/workflows/: release.yml
.kiro/steering/: architecture.md  code-structure.md
crates/dn7-cli/: Cargo.toml
crates/dn7-cli/src/: cert.rs  client.rs  common.rs  container.rs  edge.rs  info.rs  kdf.rs  lib.rs  panel.rs  service.rs  site.rs  status.rs  uninstall.rs  user.rs  util.rs
crates/dn7-container/: Cargo.toml  README.md
crates/dn7-container/docs/: P5-networking-plan.md  P6-panel-integration.md
crates/dn7-container/scripts/: image_smoke.sh  net_smoke.sh  ops_smoke.sh  port_smoke.sh  smoke.sh
crates/dn7-container/src/: cli.rs  error.rs  lib.rs
crates/dn7-container/src/cli/: args.rs  mod.rs  term.rs
crates/dn7-container/src/container/: init.rs  mod.rs  pty.rs  reexec.rs  state.rs
crates/dn7-container/src/image/: archive.rs  commit.rs  layer.rs  manifest.rs  mod.rs  reference.rs  registry.rs  spec_gen.rs  store.rs  volume.rs
crates/dn7-container/src/net/: backend.rs  config.rs  dns.rs  dns_server.rs  firewall.rs  ipam.rs  mod.rs  nft.rs  nl.rs  registry.rs
crates/dn7-container/src/oci/: bundle.rs  mod.rs  spec.rs
crates/dn7-container/src/sys/: cgroup.rs  mod.rs  mount.rs  namespaces.rs  overlay.rs  seccomp.rs
crates/dn7-container/src/sys/meminfo/: abi.rs  fuse.rs  generate.rs  mod.rs  resolve.rs
crates/dn7-container/tests/: nft_live.rs
crates/dn7-cred/: Cargo.toml
crates/dn7-cred/src/: lib.rs
crates/dn7-edge/: Cargo.toml
crates/dn7-edge/src/: acme.rs  build.rs  config.rs  conn_limit.rs  htpasswd.rs  lib.rs  lifecycle.rs  limit_body.rs  listener.rs  model.rs  ports.rs  proxy.rs  reload.rs  router.rs  security.rs  status.rs  tests.rs  throttle_body.rs  timeout_body.rs  validate.rs
docs/: README.zh-CN.md
docs/design/: pake-auth-proposal.md
releases/: 27.0.0-27G01.toml  27.0.0-build1.toml  27.0.0-build2.toml  27.0.1-build2.toml  27.0.1-build3.toml  27.0.1-build4.toml  27.0.1-build5.toml  27.0.1-build6.toml
scripts/: check_advanced_features.js  check_i18n.js  check_i18n.py  dn7_container_test.py
src/: agent.rs  api.rs  autostart.rs  banner.rs  config.rs  crypto.rs  daemon.rs  docker.rs  fetch.rs  file.rs  guardian.rs  json_store.rs  logrotate.rs  main.rs  metrics.rs  mysql.rs  nginx.rs  op_registry.rs  pairing.rs  panel.rs  paths.rs  pnet.rs  procfile.rs  procs.rs  signing.rs  supervisor.rs  terminal.rs  traffic.rs  update.rs  ws.rs
src/app/: account.rs  auth.rs  docker.rs  files.rs  mod.rs  mysql.rs  nginx.rs  users.rs
src/app/account/: mod.rs  service.rs
src/app/auth/: mod.rs  service.rs
src/app/docker/: dispatch.rs  mod.rs
src/app/files/: mod.rs  service.rs
src/app/mysql/: mod.rs
src/app/nginx/: commands.rs  dispatch.rs  mod.rs  tuning.rs
src/app/ports/: account.rs  mod.rs  users.rs
src/app/users/: mod.rs  service.rs
src/app/website/: commands.rs  dispatch.rs  mod.rs  tuning.rs
src/contracts/: mod.rs  mysql.rs  nginx.rs  website.rs
src/core/: docker.rs  mod.rs  path.rs
src/core/authz/: mod.rs
src/core/docker/: mod.rs  policy.rs
src/core/error/: mod.rs
src/core/identity/: mod.rs  model.rs
src/core/mysql/: catalog.rs  mod.rs
src/core/nginx/: error.rs  mod.rs  model.rs
src/core/path/: mod.rs
src/core/settings/: mod.rs  model.rs
src/core/website/: error.rs  mod.rs  model.rs  tuning.rs  validate.rs
src/docker/: backups.rs  containers.rs  create.rs  images.rs  install.rs  lifecycle.rs  networks.rs  opreg.rs  pull.rs  settings.rs  tests.rs  validate.rs  volumes.rs
src/docker/create/: run.rs
src/domain/: authz.rs  docker.rs  error.rs  identity.rs  mod.rs  mysql.rs  nginx.rs  settings.rs
src/domain/nginx/: mod.rs  model.rs  tuning.rs  validate.rs
src/edge/: acme.rs  build.rs  config.rs  limit.rs  listener.rs  mod.rs  proxy.rs  reload.rs  response.rs  router.rs  security.rs  static_files.rs  status.rs  store.rs  tests.rs  timeout_body.rs  tls.rs  validate.rs
src/infra/: audit.rs  auth.rs  crypto.rs  docker.rs  fetch.rs  file.rs  json_store.rs  metrics.rs  mod.rs  mysql.rs  nginx.rs  op_registry.rs  procs.rs  system.rs  totp.rs
src/infra/auth/: challenge.rs  mod.rs  rate.rs  session.rs  state.rs  stepup.rs  ticket.rs  totp_guard.rs  verifier.rs
src/infra/docker/: backups.rs  containers.rs  create.rs  dispatch.rs  images.rs  info.rs  install.rs  lifecycle.rs  mod.rs  model.rs  networks.rs  opreg.rs  pull.rs  runtime_dn7.rs  settings.rs  tests.rs  validate.rs  volumes.rs
src/infra/file/: ctn.rs  ctn_dn7.rs  ctnfs.rs  fshelper.rs  hostfs.rs  mod.rs  ops.rs
src/infra/metrics/: collect.rs  history.rs  host.rs  mod.rs
src/infra/mysql/: accounts.rs  catalog.rs  dispatch.rs  exec.rs  mod.rs  opreg.rs  provision.rs  query.rs  store.rs  tables.rs
src/infra/nginx/: access.rs  api.rs  certparse.rs  certs.rs  certs_named.rs  confgen.rs  detect.rs  htpasswd.rs  mod.rs  opreg.rs  setup.rs  sites.rs  state.rs  store.rs  tests.rs  upload.rs
src/infra/store/: mod.rs  settings.rs  users.rs
src/infra/support/: audit.rs  crypto.rs  fetch.rs  json_store.rs  mod.rs  op_registry.rs
src/infra/system/: mod.rs  ops.rs
src/infra/website/: api.rs  detect.rs  htpasswd.rs  mod.rs  opreg.rs  setup.rs  state.rs  store.rs  tests.rs  upload.rs
src/metrics/: disks.rs
src/mysql/: accounts.rs  catalog.rs  opreg.rs  provision.rs  query.rs  store.rs  tables.rs
src/nginx/: access.rs  certs.rs  certs_named.rs  confgen.rs  opreg.rs  sites.rs  state.rs  store.rs  tests.rs  upload.rs  validate.rs
src/nginx/access/: default_site.rs
src/platform/: autostart.rs  banner.rs  config.rs  init_cli.rs  kmod.rs  logrotate.rs  mod.rs  netinfo.rs  panel.rs  paths.rs  privilege.rs  procfile.rs  supervisor.rs  update.rs
src/update/: changelog.rs
src/web/: audit.rs  auth.rs  branding.rs  console.rs  mod.rs  qr.rs  server.rs  settings.rs  terminal.rs  users.rs
src/web/http/: kernel.rs  (+4 more)
tests/: architecture.rs
(+146 files in other folders)
