[package]
name = "dn7-panel"
version = "0.1.0"
edition = "2021"
description = "DN7 Panel - on-box server management console (Docker, Nginx, MySQL, files, terminal, monitoring)"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
anyhow = "1"
fs2 = "0.4"
portable-pty = "0.9"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
daemonize = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Docker management over the daemon socket (no `docker` CLI dependency).
bollard = "0.17"
# Tar streaming for container file transfer via the docker archive API.
tar = "0.4"
# Pure-Rust ZIP extraction for static-site uploads (miniz_oxide deflate backend
# — no zlib C dependency, keeps the musl-static build intact).
zip = { version = "2", default-features = false, features = ["deflate"] }
# Pure-Rust certificate generation (self-signed) — replaces the openssl CLI.
rcgen = "0.13"
# Pure-Rust ACME (Let's Encrypt) client — replaces acme.sh + curl/wget.
instant-acme = "0.7"
# Async traits / stream helpers used by the docker + acme integrations.
futures = "0.3"
bytes = "1"
# Stream adapters: wrap an AsyncRead as a Stream for chunked HTTP download
# responses (no full-file buffering). Pure Rust, musl-safe.
tokio-util = { version = "0.7", features = ["io"] }
# Local web management console: in-process HTTP server (axum). Pure Rust, musl-safe.
axum = { version = "0.7", features = ["ws"] }
# Embed the split web-console assets (css/js modules) into the binary at compile
# time so the console stays a single static binary. Pure Rust, musl-safe.
include_dir = "0.7"
# Verify Ed25519 signatures on downloaded self-update binaries with an embedded
# public key. Pure Rust (curve25519-dalek), musl-safe.
ed25519-dalek = "2"
# Read the process uid (owner check for `dn7-panel reset`). Pure FFI to libc
# (musl provides it); no C build.
libc = "0.2"
# TOTP 2FA (RFC 6238): HMAC-SHA1 over a base32 secret. All pure Rust, musl-safe.
hmac = "0.12"
sha1 = "0.10"
# QR code rendering for the 2FA enrollment (otpauth:// URI → SVG). Pure Rust.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Strong, salted password hashing for nginx Access List HTTP Basic Auth
# (bcrypt $2b$ — GPU-resistant; verified by the host nginx via crypt()). Pure Rust.
bcrypt = "0.15"
# Optional HTTPS for the panel itself (self-signed). Pin the rustls `ring`
# provider (already in the tree via reqwest) so the musl-static build stays
# C-toolchain-free (avoids aws-lc-rs).
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

[profile.release]
opt-level = 3
lto = true
