[package]
name = "dn7-panel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false
description = "DN7 Panel - on-box server management console (Docker, Nginx, MySQL, files, terminal, monitoring)"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "sync", "fs", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
anyhow = "1"
fs2 = "0.4"
portable-pty = "0.9"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
daemonize = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Docker management over the daemon socket (no `docker` CLI dependency).
bollard = "0.17"
# Tar streaming for container file transfer via the docker archive API.
tar = "0.4"
# Pure-Rust ZIP extraction for static-site uploads (miniz_oxide deflate backend
# — no zlib C dependency, keeps the musl-static build intact).
zip = { version = "2", default-features = false, features = ["deflate"] }
# Pure-Rust gzip (miniz_oxide backend, no zlib C dependency) for container
# backup tar.gz archives. musl-static safe.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Pure-Rust certificate generation (self-signed) — replaces the openssl CLI.
rcgen = "0.13"
# Pure-Rust ACME (Let's Encrypt) client — replaces acme.sh + curl/wget.
instant-acme = "0.7"
# Async traits / stream helpers used by the docker + acme integrations.
futures = "0.3"
bytes = "1"
# Stream adapters: wrap an AsyncRead as a Stream for chunked HTTP download
# responses (no full-file buffering). Pure Rust, musl-safe.
tokio-util = { version = "0.7", features = ["io"] }
# Local web management console: in-process HTTP server (axum). Pure Rust, musl-safe.
axum = { version = "0.7", features = ["ws"] }
# Embed the split web-console assets (css/js modules) into the binary at compile
# time so the console stays a single static binary. Pure Rust, musl-safe.
include_dir = "0.7"
# Verify Ed25519 signatures on downloaded self-update binaries with an embedded
# public key. Pure Rust (curve25519-dalek), musl-safe.
ed25519-dalek = "2"
# Read the process uid (owner check for `dn7-panel reset`). Pure FFI to libc
# (musl provides it); no C build.
libc = "0.2"
# TOTP 2FA (RFC 6238): HMAC-SHA1 over a base32 secret. All pure Rust, musl-safe.
hmac = "0.12"
sha1 = "0.10"
# QR code rendering for the 2FA enrollment (otpauth:// URI → SVG). Pure Rust.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Salted password hashing for nginx Access List HTTP Basic Auth. We emit the
# Apache apr1 ($apr1$ salted-MD5) format because nginx verifies it internally
# (ngx_crypt_apr1) — it never calls the host libc crypt(), so it works on every
# distro. bcrypt $2b$ depends on libxcrypt and returns 500 where the host's
# crypt() can't parse it. md-5 is pure Rust (RustCrypto), musl-safe.
md-5 = "0.10"
# Optional HTTPS for the panel itself (self-signed). Pin the rustls `ring`
# provider (already in the tree via reqwest) so the musl-static build stays
# C-toolchain-free (avoids aws-lc-rs).
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

# --- In-process edge server (`src/edge`): the pure-Rust reverse proxy that
# replaces the external nginx dependency. All pure Rust, musl-static safe; rustls
# paths are pinned to the `ring` provider (never aws-lc-rs) to keep the
# C-toolchain-free build intact.
# HTTP/1.1 + HTTP/2 server and client core.
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
# Connection auto-negotiation (h1/h2), graceful shutdown, pooled legacy client.
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "client-legacy", "http1", "http2"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
# TLS acceptor for the :443 listener — pinned to the ring provider (no aws-lc-rs).
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# Parse the panel-managed PEM cert/key files into rustls types.
rustls-pemfile = "2"
# Atomic, lock-free config publish for zero-downtime reload.
arc-swap = "1"
# CIDR matching for IP allow/deny + trusted-proxy real-IP.
ipnet = "2"
# Static-file MIME typing (pure Rust table; no libmagic).
mime_guess = "2"
# SO_REUSEPORT for graceful self-update listener handoff (M5).
socket2 = { version = "0.6", features = ["all"] }
# Standard base64 for verifying legacy `{SHA}` htpasswd hashes.
base64 = "0.22"
# HTTPS reverse-proxy upstreams: a ready rustls HttpsConnector for the pooled
# hyper-util client. Pinned to ring + webpki-roots (no aws-lc-rs, no OS cert C).
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "webpki-roots", "http1", "http2", "tls12"] }

[profile.release]
opt-level = 3
lto = true
