[package]
name = "dn7-panel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false
description = "DN7 Panel - on-box server management console (containers, website, files, terminal, monitoring)"

# Workspace: the panel (root) + the in-house container runtime crate.
[workspace]
members = ["crates/dn7-container", "crates/dn7-edge", "crates/dn7-cli", "crates/dn7-cred"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "sync", "fs", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
anyhow = "1"
fs2 = "0.4"
portable-pty = "0.9"
sha2 = "0.10"
sha-crypt = "0.5"
# Argon2id for the at-rest password verifier (server hashes the client-sent
# verifier so the stored value can't be replayed as a login credential). Pure
# Rust (blake2 + password-hash), musl-static safe — no aws-lc / C.
argon2 = "0.5"
rand = "0.8"
daemonize = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Docker management over the daemon socket (no `docker` CLI dependency).
bollard = "0.17"
# In-house container runtime — the alternative backend selected by DN7_RUNTIME=dn7
# (Linux-only; bollard stays the default + cross-platform fallback).
dn7-container = { path = "crates/dn7-container" }
dn7-edge = { path = "crates/dn7-edge" }
# The unified `dn7` CLI logic, linked in + dispatched via argv[0] (the `dn7`
# symlink) so there's a single shipped binary.
dn7-cli = { path = "crates/dn7-cli" }
# Single byte-exact source of truth for the s256 password verifier KDF — shared
# with dn7-cli so the init wizard and `dn7 user add|passwd` can't drift apart.
dn7-cred = { path = "crates/dn7-cred" }
# Tar streaming for container file transfer via the docker archive API.
tar = "0.4"
# Pure-Rust ZIP extraction for static-site uploads (miniz_oxide deflate backend
# — no zlib C dependency, keeps the musl-static build intact).
zip = { version = "2", default-features = false, features = ["deflate"] }
# Pure-Rust gzip (miniz_oxide backend, no zlib C dependency) for container
# backup tar.gz archives. musl-static safe.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Pure-Rust certificate generation (self-signed) — replaces the openssl CLI.
rcgen = "0.13"
# Pure-Rust ACME (Let's Encrypt) client — replaces acme.sh + curl/wget.
instant-acme = "0.7"
# Async traits / stream helpers used by the docker + acme integrations.
futures = "0.3"
bytes = "1"
# Stream adapters: wrap an AsyncRead as a Stream for chunked HTTP download
# responses (no full-file buffering). Pure Rust, musl-safe.
tokio-util = { version = "0.7", features = ["io"] }
# Local web management console: in-process HTTP server (axum). Pure Rust, musl-safe.
axum = { version = "0.7", features = ["ws"] }
# Embed the split web-console assets (css/js modules) into the binary at compile
# time so the console stays a single static binary. Pure Rust, musl-safe.
include_dir = "0.7"
# Verify Ed25519 signatures on downloaded self-update binaries with an embedded
# public key. Pure Rust (curve25519-dalek), musl-safe.
ed25519-dalek = "2"
# Read the process uid (owner check for `dn7-panel reset`). Pure FFI to libc
# (musl provides it); no C build.
libc = "0.2"
# TOTP 2FA (RFC 6238): HMAC-SHA1 over a base32 secret. All pure Rust, musl-safe.
hmac = "0.12"
sha1 = "0.10"
# QR code rendering for the 2FA enrollment (otpauth:// URI → SVG). Pure Rust.
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# HTTP types (StatusCode / HeaderMap / …) used directly by the web layer next to
# axum. The reverse-proxy stack (hyper, rustls, tokio-rustls, hyper-rustls,
# arc-swap, ipnet, socket2, mime_guess, http-body*), the htpasswd hashing (md-5,
# base64) and the panel-self-HTTPS attempt (axum-server) now live in the
# crates/dn7-edge crate — they were orphaned here by the src/edge extraction.
http = "1"

[profile.release]
opt-level = 3
lto = true
