[package]
name = "dn7-edge"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

# The in-process reverse proxy / edge server (the pure-Rust nginx replacement),
# extracted from the panel as a self-contained crate. Like dn7-container, it owns
# its own input contract (it does NOT depend on the panel's domain model); the
# panel converts its website model into this crate's input at the reload seam,
# and injects an upstream resolver for container-backed sites.
[lib]
name = "dn7_edge"
path = "src/lib.rs"

[dependencies]
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful", "client-legacy", "http1", "http2"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "fs", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
rcgen = "0.13"
instant-acme = "0.7"
arc-swap = "1"
ipnet = "2"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
bytes = "1"
futures = "0.3"
socket2 = { version = "0.6", features = ["all"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
base64 = "0.22"
sha1 = "0.10"
md-5 = "0.10"
libc = "0.2"
tracing = "0.1"
rand = "0.8"
mime_guess = "2"
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "webpki-roots", "http1", "http2", "tls12"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "stream"] }
